--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,11 @@ body {
   margin-left: auto;
 }
 
+.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 @media (min-width: 576px) {
   .container,
   .container-sm {
